--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-
+<h2>Hangman</h2>
+<br>
+<div class = "block">
+    blah de blah de blah
+</div>
 </body>
 </html>
