fix print word, modify the size of the select thing so it is like... visually okay, and just keep going. best of luck! ti ochen' khorosho/kharasho

--- a/index.html
+++ b/index.html
@@ -19,9 +19,34 @@
     <br>
     <div class = "w3-border w3-topbar w3-leftbar w3-bottombar w3-rightbar w3-border-red">
         <h4>Guess A Letter</h4>
-        <input type = "text" class = "w3-round w3-border w3-border-red" value = "" id = "letter">
-        <br>
-        <input type = "button" class = "w3-button w3-small w3-round w3-red w3-hover-pink" onclick = "guessLetter()" id = "button" value = "Guess Your Letter">
+        <select class = "w3-round w3-border w3-border-red" size = "3" id = "letter" onclick = "guessLetter()">
+            <option value = "a">a</option>
+            <option value = "b">b</option>
+            <option value = "c">c</option>
+            <option value = "d">d</option>
+            <option value = "e">e</option>
+            <option value = "f">f</option>
+            <option value = "g">g</option>
+            <option value = "h">h</option>
+            <option value = "i">i</option>
+            <option value = "j">j</option>
+            <option value = "k">k</option>
+            <option value = "l">l</option>
+            <option value = "m">m</option>
+            <option value = "n">n</option>
+            <option value = "o">o</option>
+            <option value = "p">p</option>
+            <option value = "q">q</option>
+            <option value = "r">r</option>
+            <option value = "s">s</option>
+            <option value = "t">t</option>
+            <option value = "u">u</option>
+            <option value = "v">v</option>
+            <option value = "w">w</option>
+            <option value = "x">x</option>
+            <option value = "y">y</option>
+            <option value = "z">z</option>
+        </select>
         <br>
         <br>
     </div>
