--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
         <p id = "word"></p>
     </div>
     <br>
-    Categories: <select class = "w3-round w3-border w3-border-red" size = "1" id = "categories" onclick = "guessLetter()">
+    Categories: <select class = "w3-round w3-border w3-border-red" size = "4" id = "categories" onclick = "applySelection()">
     <option value = "defaultWord">Default Words</option>
     <option value = "bhs">BHS Teachers & Staff</option>
     <option value = "langEasy">Languages (easy)</option>
-    <option value = "langHard">Languages (hard)</option>
-    <optio
+    <option value = "langHard">Languages (rare, very hard, good luck)</option>
+</select>
+    <br>
     <br>
     <div class = "w3-border w3-topbar w3-leftbar w3-bottombar w3-rightbar w3-border-red">
         <h4>Guess A Letter</h4>
