--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <div class = "w3-border w3-topbar w3-leftbar w3-bottombar w3-rightbar w3-border-red">
         <h4>Word</h4>
         <p id = "word"></p>
+        <button class = "w3-button w3-small w3-hover-red w3-round w3-border w3-border-red" onclick = "revealWord()" id = "reveal">Reveal The Word</button>
+        <span id = "revealed"></span>
     </div>
     <br>
-    Categories: <select class = "w3-round w3-border w3-border-red" size = "4" id = "categories" onclick = "applySelection()">
+    Categories: <select class = "w3-select w3-round w3-border w3-border-red" size = "2" onclick = "applySelection()" id = "categories">
     <option value = "defaultWord">Default Words</option>
     <option value = "bhs">BHS Teachers & Staff</option>
     <option value = "langEasy">Languages (easy)</option>
