second advanced function

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <br>
     Categories: <select class = "w3-select w3-round w3-border w3-border-red" size = "2" onclick = "applySelection()" id = "categories">
-    <option value = "defaultWord">Default Words</option>
+    <option value = "defaultWord">Fruits (default)</option>
     <option value = "bhs">BHS Teachers & Staff</option>
     <option value = "langEasy">Languages (easy)</option>
     <option value = "langHard">Languages (rare, very hard, good luck)</option>
@@ -64,6 +64,7 @@
     <div class = "w3-border w3-topbar w3-leftbar w3-bottombar w3-rightbar w3-border-red">
         <h4>Number of Guesses Remaining</h4>
         <p id = "guessNumber"></p>
+        <span id = "image"></span>
     </div>
     <br>
     <div class = "w3-border w3-topbar w3-leftbar w3-bottombar w3-rightbar w3-border-red">
