--- a/index.html
+++ b/index.html
@@ -17,14 +17,19 @@
         <p id = "word"></p>
         <button class = "w3-button w3-small w3-hover-red w3-round w3-border w3-border-red" onclick = "revealWord()" id = "reveal">Reveal The Word</button>
         <span id = "revealed"></span>
+            <span id = "endGame">
+                <button class = "w3-button w3-small w3-hover-red w3-round w3-border w3-border-red" onclick = "applySelection()">Restart The Game</button>
+                <br>
+                <br>
+            </span>
     </div>
     <br>
     Categories: <select class = "w3-select w3-round w3-border w3-border-red" size = "2" onclick = "applySelection()" id = "categories">
-    <option value = "defaultWord">Fruits (default)</option>
-    <option value = "bhs">BHS Teachers & Staff</option>
-    <option value = "langEasy">Languages (easy)</option>
-    <option value = "langHard">Languages (rare, very hard, good luck)</option>
-</select>
+        <option value = "defaultWord">Fruits (default)</option>
+        <option value = "bhs">BHS Teachers & Staff</option>
+        <option value = "langEasy">Languages (easy)</option>
+        <option value = "langHard">Languages (rare, very hard, good luck)</option>
+    </select>
     <br>
     <br>
     <div class = "w3-border w3-topbar w3-leftbar w3-bottombar w3-rightbar w3-border-red">
